Revert "Revert "Fea node2vec capi implementation""

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -145,6 +145,7 @@ rapids_cpm_init()
 # lags behind.
 ###
 include(cmake/thirdparty/get_raft.cmake)
+include(cmake/thirdparty/get_libcugraphops.cmake)
 
 include(cmake/thirdparty/get_nccl.cmake)
 include(cmake/thirdparty/get_cuhornet.cmake)
